--- a/resources/styles/responsive.css
+++ b/resources/styles/responsive.css
@@ -16,12 +16,6 @@ nav {
   width: 100%;
 }
 
-@media only screen and (min-width:767px) {
-    #map {
-
-        position: fixed !important;
-    }
-}
 
 @media only screen and (max-width:766px) {
 
